--- a/MyRallyApp/en.lproj/MainStoryboard.storyboard
+++ b/MyRallyApp/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,114 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--Login Controller-->
         <scene sceneID="5">
             <objects>
-                <viewController id="2" customClass="RAViewController" sceneMemberID="viewController">
+                <viewController id="2" customClass="RALoginController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5I9-j4-NCa">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mjB-ok-Svm">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3qu-L5-3bK">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="crp-w3-OG5">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HUV-dB-KiU">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="o1S-Ea-BuF" kind="push" id="hdF-pp-a9q"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="crp-w3-OG5" firstAttribute="top" secondItem="5I9-j4-NCa" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="47u-Cs-lfk"/>
+                            <constraint firstAttribute="trailing" secondItem="HUV-dB-KiU" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="4Ut-03-WCe"/>
+                            <constraint firstItem="5I9-j4-NCa" firstAttribute="top" secondItem="3qu-L5-3bK" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="DQ9-s2-4rP"/>
+                            <constraint firstItem="3qu-L5-3bK" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Lm0-gX-JDf"/>
+                            <constraint firstAttribute="trailing" secondItem="mjB-ok-Svm" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Qgk-sG-6sX"/>
+                            <constraint firstItem="3qu-L5-3bK" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="aGf-gq-S0j"/>
+                            <constraint firstItem="HUV-dB-KiU" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="g0T-Ms-Vus"/>
+                            <constraint firstAttribute="trailing" secondItem="5I9-j4-NCa" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="gb9-lq-FKz"/>
+                            <constraint firstItem="HUV-dB-KiU" firstAttribute="top" secondItem="3" secondAttribute="top" constant="252" id="guN-Px-oEq"/>
+                            <constraint firstItem="mjB-ok-Svm" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="mQd-QW-qLU"/>
+                            <constraint firstItem="mjB-ok-Svm" firstAttribute="top" secondItem="crp-w3-OG5" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="nQF-sZ-5Rb"/>
+                            <constraint firstItem="5I9-j4-NCa" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="ofO-pn-ro7"/>
+                            <constraint firstItem="crp-w3-OG5" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="t2x-Ou-Omg"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Stories View Controller-->
+        <scene sceneID="bWc-JV-Fgq">
+            <objects>
+                <viewController id="o1S-Ea-BuF" customClass="StoriesViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5A5-IC-Z2Y">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6Wn-sh-5zt">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="trailing" secondItem="5A5-IC-Z2Y" secondAttribute="trailing" type="default" id="CG4-3D-o0f"/>
+                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="bottom" secondItem="5A5-IC-Z2Y" secondAttribute="bottom" type="default" id="YHT-fT-y7s"/>
+                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="top" secondItem="5A5-IC-Z2Y" secondAttribute="top" type="default" id="pU2-bX-Inr"/>
+                            <constraint firstItem="6Wn-sh-5zt" firstAttribute="leading" secondItem="5A5-IC-Z2Y" secondAttribute="leading" type="default" id="w1Q-nD-3D0"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="jWl-qv-0ii"/>
+                    <connections>
+                        <outlet property="storiesTable" destination="6Wn-sh-5zt" id="YUl-yq-Zhd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2iY-Mo-RpU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="688" y="243"/>
+        </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="RALoginController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RALoginController.h"/>
+        </class>
+        <class className="StoriesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StoriesViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="storiesTable" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
