--- a/MyRallyApp/en.lproj/MainStoryboard.storyboard
+++ b/MyRallyApp/en.lproj/MainStoryboard.storyboard
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="uKk-gt-UUE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="YfZ-OF-e6I">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="uKk-gt-UUE" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tPP-VF-XdH">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="C0x-MK-KN5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ePS-uV-Ald" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-354" y="249"/>
+        </scene>
         <!--Login Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="RALoginController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5I9-j4-NCa">
@@ -61,6 +76,7 @@
                             <constraint firstItem="crp-w3-OG5" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="t2x-Ou-Omg"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="3Kc-tz-psH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
@@ -70,29 +86,33 @@
             <objects>
                 <viewController id="o1S-Ea-BuF" customClass="StoriesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5A5-IC-Z2Y">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6Wn-sh-5zt">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="1HV-ko-z9e"/>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="1HV-ko-z9e" firstAttribute="centerY" secondItem="6Wn-sh-5zt" secondAttribute="centerY" type="default" id="4r3-F7-DPH"/>
                             <constraint firstItem="6Wn-sh-5zt" firstAttribute="trailing" secondItem="5A5-IC-Z2Y" secondAttribute="trailing" type="default" id="CG4-3D-o0f"/>
                             <constraint firstItem="6Wn-sh-5zt" firstAttribute="bottom" secondItem="5A5-IC-Z2Y" secondAttribute="bottom" type="default" id="YHT-fT-y7s"/>
+                            <constraint firstItem="1HV-ko-z9e" firstAttribute="centerX" secondItem="6Wn-sh-5zt" secondAttribute="centerX" type="default" id="m7W-zp-hGa"/>
                             <constraint firstItem="6Wn-sh-5zt" firstAttribute="top" secondItem="5A5-IC-Z2Y" secondAttribute="top" type="default" id="pU2-bX-Inr"/>
                             <constraint firstItem="6Wn-sh-5zt" firstAttribute="leading" secondItem="5A5-IC-Z2Y" secondAttribute="leading" type="default" id="w1Q-nD-3D0"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jWl-qv-0ii"/>
                     <connections>
+                        <outlet property="loadingIndicator" destination="1HV-ko-z9e" id="e9a-jO-0Ie"/>
                         <outlet property="storiesTable" destination="6Wn-sh-5zt" id="YUl-yq-Zhd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2iY-Mo-RpU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="688" y="243"/>
+            <point key="canvasLocation" x="646" y="231"/>
         </scene>
     </scenes>
     <classes>
@@ -105,6 +125,7 @@
         <class className="StoriesViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/StoriesViewController.h"/>
             <relationships>
+                <relationship kind="outlet" name="loadingIndicator" candidateClass="UIActivityIndicatorView"/>
                 <relationship kind="outlet" name="storiesTable" candidateClass="UITableView"/>
             </relationships>
         </class>
